--- a/src/components/header.css
+++ b/src/components/header.css
@@ -11,10 +11,12 @@
 
 a{
     box-shadow: none;
+    text-decoration: none;
+    list-style-type: none;
 }
 .dropdown-menu {
     font-size: 13px;
-    left:-45px !important;
+    left: -142px !important;
 }
 
 .dropdown-toggle , .nav-link {
@@ -58,14 +60,22 @@ a{
     color: #6c757d;
     content: "";
 }
-/* img {
+.dropdown-menu {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
-    opacity: 1;
-    transition: none 0s ease 0s;
-} */
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 15rem !important;
+    padding: -0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 0.9rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+}
