--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,3 +1,8 @@
+
+body{
+  overflow-x: hidden;
+}
+
 p {
     /* text-align: justify; */
     font-weight: 600;
@@ -95,4 +100,24 @@ p {
   }
   .col-4 >.blog-button:hover{
     background: 3px solid rgb(224, 164, 88) !important;
+  }
+
+  .bio__Container-bVWbHw,  .gJrTLd{
+    text-align: -webkit-center;
+    display: block;
+  }
+
+  .bg{
+    background-image: url("../images/employee.png");
+    height: 200px;
+    width: 100%;
+  }
+
+
+  img {
+    width: 30%;
+  }
+
+  .blog:hover{
+    transform: scale(1.1);
   }
